--- a/views/index2.erb
+++ b/views/index2.erb
@@ -10,12 +10,13 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     </head>
     <body>
         <div class="w3-row w3-border">
             <div class="w3-container w3-half w3-white">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="rounded">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="w3-round w3-hover-sepia">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
