--- a/views/index2.erb
+++ b/views/index2.erb
@@ -14,10 +14,10 @@
 
     </head>
     <body>
-        <div class="w3-row w3-border">
+        <div class="w3-cell-row w3-border">
             <div class="w3-container w3-half w3-white w3-border">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:50px" class="w3-round w3-hover-opacity">
-                <img src="/imagenes/galeria/ep/contratapa.jpg" alt="contratapasemilla" style="width:50%;margin-top:50px" class="w3-round w3-hover-opacity">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
+                <img src="/imagenes/galeria/ep/contratapa.jpg" alt="contratapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
