--- a/views/index2.erb
+++ b/views/index2.erb
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Buena Cosecha | Ska Reggae </title>
+        <title>Buena Cosecha | Ska Reggae
+        </title>
         <meta name="google-site-verification" content="cUWX8JFI31vB6M5HPZGZmoYoIAUT8TOvdMAVTTqbVGs"/>
         <meta name="Buena Cosecha | Ska, Reggae" content="Buena Cosecha, Página oficial, ska, reggae, musica, banda, shows, recitales, fotos, videos">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -20,9 +21,10 @@
                 <img src="/imagenes/galeria/ep/contratapa.jpg" alt="contratapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
             </div>
             <div class="w3-container w3-half w3-black">
-              <h2>Semilla</h2>
-              <p>Nuestro primer EP</p>
+                <h2>Semilla</h2>
+                <p>Nuestro primer EP</p>
                 <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1" style="margin-top:30px" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+                <iframe width="300" height="380" scrolling="no" frameborder="no" style="margin-top:30px" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23ff0000&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
             </div>
         </div>
 
