--- a/views/index2.erb
+++ b/views/index2.erb
@@ -11,16 +11,15 @@
         <link href="<%= url('/estilos/styles.css') %>" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     </head>
     <body background="/imagenes/galeria/fechas/makena9-12/band1.jpg" style="width:100%">
         <div class="w3-cell-row w3-border">
-            <div class="w3-container w3-half w3-white w3-border">
+            <div class="w3-container w3-half  w3-border">
                 <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
                 <img src="/imagenes/galeria/ep/contratapa.jpg" alt="contratapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
             </div>
-            <div class="w3-container w3-half w3-black">
+            <div class="w3-container w3-half">
                 <h2>Semilla</h2>
                 <p>Nuestro primer EP</p>
                 <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1" style="margin-top:30px" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
