--- a/views/index2.erb
+++ b/views/index2.erb
@@ -13,9 +13,9 @@
         <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     </head>
-    <body background="/imagenes/galeria/fechas/makena9-12/band1.jpg" style="width:100%">
-        <div class="w3-cell-row w3-border">
-            <div class="w3-container w3-half  w3-border">
+    <body>
+        <div class="w3-cell-row w3-border" background="/imagenes/galeria/fechas/makena9-12/band1.jpg" style="width:100%">
+            <div class="w3-container w3-half">
                 <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
                 <img src="/imagenes/galeria/ep/contratapa.jpg" alt="contratapasemilla" style="width:40%;margin-top:50px" class="w3-round w3-hover-opacity">
             </div>
